--- a/package.json
+++ b/package.json
@@ -3,15 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
+    "html-react-parser": "^0.6.4",
     "react": "^16.8.6",
+    "react-content-loader": "^4.2.1",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-img-fallback": "^1.0.1",
+    "react-rater": "^5.1.0",
+    "react-reveal": "^1.2.2",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "react-sharingbuttons": "^1.0.0",
+    "react-skeleton-loader": "^1.0.4",
+    "react-smooth-image": "^1.1.0",
+    "react-star-rating": "^1.4.2",
+    "reactstrap": "^7.1.0",
+    "recompose": "^0.30.0",
+    "simple-line-icons": "^2.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-sass start-js",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-sass": "node-sass-chokidar src/styles/scss/index.scss -o src/styles/css --output-style compressed",
+    "watch-sass": "npm run build-sass && node-sass-chokidar src/styles/scss/index.scss -o src/styles/css --watch --recursive"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +40,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "node-sass-chokidar": "^1.3.5",
+    "npm-run-all": "^4.1.5"
+  }
 }
