--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movies",
+  "name": "booksviewer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,8 +20,7 @@
     "react-smooth-image": "^1.1.0",
     "react-star-rating": "^1.4.2",
     "reactstrap": "^7.1.0",
-    "recompose": "^0.30.0",
-    "simple-line-icons": "^2.4.1"
+    "recompose": "^0.30.0"
   },
   "scripts": {
     "start-js": "react-scripts start",
