--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-content-loader": "^4.2.1",
     "react-dom": "^16.8.6",
     "react-img-fallback": "^1.0.1",
+    "react-progressive-image": "^0.6.0",
     "react-rater": "^5.1.0",
     "react-reveal": "^1.2.2",
     "react-router": "^5.0.0",
